# bot_forge

./: .gitmodules  LICENSE  README.md  REDEME.md  debug_path.py  test_comprehensive_system.py  test_data_collection.py  test_data_collection_fixed.py
backend/: bot_forge.db  pyproject.toml
backend/app/: backtest_engine.py  config.py  database.py  main.py  models.py  topgun_integration.py  websocket_manager.py
backend/app/routes/: analysis.py  data.py  settings.py
cli/: export.py  o3_analysis.py
docs/: SETUP.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/scripts/: setup.sh  update_dependencies.sh
frontend/src/: App.tsx  App_old.tsx
frontend/src/components/: AnalysisPanel.tsx  BacktestPanel.tsx  DataManagement.tsx  DataPreview.tsx  SettingsPanel.tsx
frontend/src/components/ui/: breadcrumb.tsx  context-menu.tsx  dropdown-menu.tsx  exchanges.ts  form.tsx  hover-card.tsx  input.tsx  menubar.tsx  navigation-menu.tsx  popover.tsx  resizable.tsx  select.tsx  sidebar.tsx  tooltip.tsx
frontend/src/constants/: exchanges.ts
scripts/: setup.sh  update_dependencies.sh
