[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.13"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
websockets = "^15.0.1"
aiohttp = "^3.12.13"
sqlalchemy = "^2.0.41"
pandas = "^2.3.0"
numpy = "^2.3.1"
rich = "^14.0.0"
structlog = "^25.4.0"
python-dotenv = "^1.1.1"
pydantic-settings = "^2.10.1"
asyncio-mqtt = "^0.16.2"
tenacity = "^9.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"